RESOLVED FIXED 265250
[IFC] linehasContent in InlineDisplayContentBuilder has incorrect capitalization
https://bugs.webkit.org/show_bug.cgi?id=265250
Summary [IFC] linehasContent in InlineDisplayContentBuilder has incorrect capitalization
zalan
Reported 2023-11-22 07:17:53 PST
ssia
Attachments
Patch (5.94 KB, patch)
2023-11-22 07:19 PST, zalan
no flags
zalan
Comment 1 2023-11-22 07:19:00 PST
EWS
Comment 2 2023-11-22 09:07:09 PST
Committed 271057@main (29291e21a3f1): <https://commits.webkit.org/271057@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 468728 [details].
Radar WebKit Bug Importer
Comment 3 2023-11-22 09:08:18 PST
Note You need to log in before you can comment on or make changes to this bug.