[IFC] linehasContent in InlineDisplayContentBuilder has incorrect capitalization https://bugs.webkit.org/show_bug.cgi?id=265250

Reviewed by Antti Koivisto.

* Source/WebCore/layout/formattingContexts/inline/display/InlineDisplayContentBuilder.cpp:
(WebCore::Layout::InlineDisplayContentBuilder::appendRootInlineBoxDisplayBox):
(WebCore::Layout::InlineDisplayContentBuilder::appendInlineBoxDisplayBox):
(WebCore::Layout::InlineDisplayContentBuilder::appendSpanningInlineBoxDisplayBox):
* Source/WebCore/layout/formattingContexts/inline/display/InlineDisplayContentBuilder.h:

Canonical link: https://commits.webkit.org/271057@main